# swarm

./: .env.example  .gitignore  COMPLETION_SUMMARY.md  CSP_FIX_GUIDE.md  DEPLOYMENT_READINESS_AUDIT.md  DEVELOPER_HANDOFF_GUIDE.md  INFRASTRUCTURE_IMPROVEMENTS.md  MAILGUN_SETUP_GUIDE.md  MAILGUN_WEBHOOK_SETUP.md  MCP_FILESYSTEM_DEPLOYMENT.md  PRODUCTION_DEPLOYMENT_GUIDE.md  README.md  RENDER_DEPLOYMENT_CHECKLIST.md  RENDER_DEPLOYMENT_FIXES.md  REPOSITORY_ORGANIZATION.md  STYLING_FIXES_SUMMARY.md  SUPERMEMORY_INTEGRATION_STATUS.md  SWARM_FEATURE_FUNCTIONALITY_GUIDE.md  SYSTEM_INTEGRATION_OVERVIEW.md  UI_FIX_HANDOFF.md  app.py  app_production.py  cypress.config.js  demo_server.py  deploy-csp-fix.sh  deploy.sh  gunicorn.conf.py  package-lock.json  package.json  render.env.template  render.yaml  requirements-dev.txt  requirements.txt  simple_server.py  tailwind.config.js  test-mailgun-webhook.py  test_service_robustness.py  working_server.py  wsgi.py
config/: .env.example  agents.json  celery_config.py  config_loader.py  database.py  email_agent_config.yaml  mcp_config.json  models.json  workflows.json  zen_setup.sh
core/: agent_models.py  blueprint_registry.py  dependency_injection.py  interfaces.py  service_registration.py  service_registry.py  simple_di.py
deployment/: DEPLOYMENT_GUIDE.md  DOCKERFILE_HARDENING.md  Dockerfile  production_setup.sh  test_multi_agent.py
docs/: ADVANCED_UI_DATABASE_INTEGRATION.md  API_KEY.txt  CHANGELOG.md  CODE_CLEANUP_SUMMARY.md  ISSUE_3_ERROR_HANDLING_FIX_SUMMARY.md  ISSUE_4_DATABASE_PATTERN_FIX_SUMMARY.md  ORGANIZATION_SUMMARY.md  PRIORITY_FIXES_IMPLEMENTATION.md  README.md  SECURITY_HARDENING_ADDITIONS.md  (+28 more)
mcp_new_project/config/: .env.example  agents.py  constants.py  mcp_config.json  production_database.py  pyproject.toml  pytest.ini  workflows_v2.json
mcp_new_project/config/requirements/: requirements-dev.txt  requirements-test.txt  requirements.txt  requirements_email_agent.txt
mcp_new_project/config/schemas/: app_config_schema.json
(+414 files in other folders)
